Element [headline] of page [index.html] updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <header> 
     <div id="strapline"> 
      <div id="welcome_slogan"> 
-      <h3 data-cms="headline" data-cms-style="basic">Test &nbsp;Überschrift</h3> 
+      <h3 data-cms="headline" data-cms-style="basic">Test &nbsp;Überschriftf</h3> 
      </div> 
      <!--close welcome_slogan--> 
     </div> 
