--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <header> 
     <div id="strapline"> 
      <div id="welcome_slogan"> 
-      <h3 data-cms="headline" data-cms-style="basic">Hallo&nbsp;<strong>Überschrifft</strong></h3> 
+      <h3 data-cms="headline" data-cms-style="basic">Hallo&nbsp;<strong>Überschrift</strong></h3> 
      </div> 
      <!--close welcome_slogan--> 
     </div> 
