Element [headline] of page [index.html] updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <header> 
     <div id="strapline"> 
      <div id="welcome_slogan"> 
-      <h3 data-cms="headline" data-cms-style="basic">Hallo&nbsp;<strong>Überschrift</strong></h3> 
+      <h3 data-cms="headline" data-cms-style="basic">Hsllo</h3> 
      </div> 
      <!--close welcome_slogan--> 
     </div> 
@@ -45,7 +45,7 @@
    <div id="site_content"> 
     <div class="sidebar_container"> 
      <div class="sidebar"> 
-      <div class="sidebar_item" data-cms="sidebar1">
+      <div class="sidebar_item" data-cms="sidebar1"> 
        <h2>New Website</h2> 
        <p>Welcome to our&nbsp;website. Please have a look around, any feedback is much appreciated.</p> 
       </div> 
