--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <header>
 	  <div id="strapline">
 	    <div id="welcome_slogan">
-	      <h3 data-cms="headline" data-cms-style="basic">Welcome To Free HTML5</h3>
+	      <h3 data-cms-global="headline" data-cms-style="basic">Welcome To Free HTML5</h3>
 	    </div><!--close welcome_slogan-->
       </div><!--close strapline-->	  
 	  <nav>
