--- a/testimonials.html
+++ b/testimonials.html
@@ -15,7 +15,7 @@
    <header> 
     <div id="strapline"> 
      <div id="welcome_slogan"> 
-      <h3 data-cms="headline" data-cms-style="basic">Headline</h3> 
+      <h3 data-cms-global="headline" data-cms-style="basic">Headline</h3> 
      </div> 
      <!--close welcome_slogan--> 
     </div> 
