--- a/contact.html
+++ b/contact.html
@@ -1,46 +1,46 @@
-<!DOCTYPE html> 
+<!doctype html>
 <html>
-
-<head>
-  <title>Free HTML5 Templates</title>
-  <meta name="description" content="website description" />
-  <meta name="keywords" content="website keywords, website keywords" />
+ <head> 
+  <title>Free HTML5 Templates</title> 
+  <meta name="description" content="website description"> 
+  <meta name="keywords" content="website keywords, website keywords"> 
   <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
   <meta charset="UTF-8"> 
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <!-- modernizr enables HTML5 elements and feature detects -->
-  <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
-</head>
-
-<body>
-  <div id="main">
-
-    <header>
-	  <div id="strapline">
-	    <div id="welcome_slogan">
-	      <h3 data-cms-global="headline" data-cms-style="basic">Welcome To Free HTML5</h3>
-	    </div><!--close welcome_slogan-->
-      </div><!--close strapline-->	  
-	  <nav>
-	    <div id="menubar">
-          <ul id="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="ourwork.html">Our Work</a></li>
-            <li><a href="testimonials.html">Testimonials</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li class="current"><a href="contact.html">Contact Us</a></li>
-          </ul>
-        </div><!--close menubar-->	
-      </nav>
-    </header>
-	
-    <div id="slideshow_container">  
-	  <div class="slideshow">
-	    <ul class="slideshow">
-          <li class="show"><img width="940" height="250" src="images/home_1.jpg" data-cms-image alt="&quot;Enter your caption here&quot;" /></li>
-        </ul> 
-	  </div><!--close slideshow-->  	
-	</div> 
+  <link rel="stylesheet" type="text/css" href="css/style.css"> 
+  <!-- modernizr enables HTML5 elements and feature detects --> 
+  <script type="text/javascript" src="js/modernizr-1.5.min.js"></script> 
+ </head> 
+ <body> 
+  <div id="main"> 
+   <header> 
+    <div id="strapline"> 
+     <div id="welcome_slogan"> 
+      <h3 data-cms-global="headline" data-cms-style="basic">Woho super Test</h3> 
+     </div> 
+     <!--close welcome_slogan--> 
+    </div> 
+    <!--close strapline--> 
+    <nav> 
+     <div id="menubar"> 
+      <ul id="nav"> 
+       <li><a href="index.html">Home</a></li> 
+       <li><a href="ourwork.html">Our Work</a></li> 
+       <li><a href="testimonials.html">Testimonials</a></li> 
+       <li><a href="projects.html">Projects</a></li> 
+       <li class="current"><a href="contact.html">Contact Us</a></li> 
+      </ul> 
+     </div> 
+     <!--close menubar--> 
+    </nav> 
+   </header> 
+   <div id="slideshow_container"> 
+    <div class="slideshow"> 
+     <ul class="slideshow"> 
+      <li class="show"><img width="940" height="250" src="images/home_1.jpg" data-cms-image alt="&quot;Enter your caption here&quot;"></li> 
+     </ul> 
+    </div> 
+    <!--close slideshow--> 
+   </div> 
    <!--close slideshow_container--> 
    <div id="site_content"> 
     <div class="sidebar_container"> 
@@ -97,15 +97,22 @@
     <!--close content--> 
    </div> 
    <!--close site_content--> 
-   <footer>
-	  <a href="index.html">Home</a> | <a href="ourwork.html">Our Work</a> | <a href="testimonials.html">Testimonials</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a><br/><br/>
-	  <a href="http://fotogrph.com">Images</a> |  <a href="http://www.heartinternet.co.uk/vps/">Virtual Server</a>  | website template by <a href="http://www.freehtml5templates.co.uk">Free HTML5 Templates</a>
-    </footer>  
-  </div><!--close main-->
-
-  <!-- javascript at the bottom for fast page loading -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/image_slide.js"></script>	
-  
-</body>
+   <footer> 
+    <a href="index.html">Home</a> | 
+    <a href="ourwork.html">Our Work</a> | 
+    <a href="testimonials.html">Testimonials</a> | 
+    <a href="projects.html">Projects</a> | 
+    <a href="contact.html">Contact</a> 
+    <br> 
+    <br> 
+    <a href="http://fotogrph.com">Images</a> | 
+    <a href="http://www.heartinternet.co.uk/vps/">Virtual Server</a> | website template by 
+    <a href="http://www.freehtml5templates.co.uk">Free HTML5 Templates</a> 
+   </footer> 
+  </div> 
+  <!--close main--> 
+  <!-- javascript at the bottom for fast page loading --> 
+  <script type="text/javascript" src="js/jquery.min.js"></script> 
+  <script type="text/javascript" src="js/image_slide.js"></script>  
+ </body>
 </html>
