Element [content] of page [index.html] updated

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     </div> 
     <!--close sidebar_container--> 
     <div id="content"> 
-     <div class="content_item" data-cms="content"> 
-      <h2>Hallo das ist ein Test</h2> 
+     <div class="content_item" data-cms="content">
+      <h2>Hallo das ist ein Testtt</h2> 
       <p>super content</p> 
       <ol> 
        <li>List Content</li> 
