Element [content] of page [index.html] updated

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!--close sidebar_container--> 
     <div id="content"> 
      <div class="content_item" data-cms="content">
-      <h2>Hallo das ist ein Testtt</h2> 
+      <h2>Hallo das ist ein Testtttttt</h2> 
       <p>super content</p> 
       <ol> 
        <li>List Content</li> 
