--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <header> 
     <div id="strapline"> 
      <div id="welcome_slogan"> 
-      <h3 data-cms-global="headline" data-cms-style="basic">Woho super Test</h3> 
+      <h3 data-cms-global="headline" data-cms-style="basic">Woho super Testttttt</h3> 
      </div> 
      <!--close welcome_slogan--> 
     </div> 
@@ -81,7 +81,7 @@
     </div> 
     <!--close sidebar_container--> 
     <div id="content"> 
-     <div class="content_item" data-cms="content">
+     <div class="content_item" data-cms="content"> 
       <h2>Hallo das ist ein Testtttttt</h2> 
       <p>super content</p> 
       <ol> 
