--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
    <header> 
     <div id="strapline"> 
      <div id="welcome_slogan"> 
-      <h3 data-cms-global="headline" data-cms-style="basic">Hallo Julia</h3> 
+      <h3 data-cms-global="headline" data-cms-style="basic">Hallo Julia 2</h3> 
      </div> 
      <!--close welcome_slogan--> 
     </div> 
