Element [content] of page [index.html] updated

--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
     </div> 
     <!--close sidebar_container--> 
     <div id="content"> 
-     <div class="content_item" data-cms="content"> 
+     <div class="content_item" data-cms="content">
       <h2>Hallo das ist ein Testtttttt</h2> 
       <p>super content</p> 
+      <p>&nbsp;</p> 
+      <p>this is new content</p> 
       <ol> 
        <li>List Content</li> 
        <li>Test</li> 
